# vietlott-prediction-web

./: .gitattributes  .gitignore  DATA_DICTIONARY.md  DU_DOAN_BINGO18_0171884.md  NGHIEN_CUU.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: loi-du-lieu.yml  loi-nguon.yml  tin-hieu-thong-ke.yml
.github/workflows/: build-pages.yml
docs/: ARCHITECTURE.md  AUDIT_BLOCK_BOOTSTRAP.md  AUDIT_CHANGE_POINT_SCAN.md  AUDIT_PERIOD_BREAKDOWN.md  AUDIT_PERMUTATION_CHECKS.md  AUDIT_POWER_ANALYSIS.md  AUDIT_RELIABILITY_SENSITIVITY.md  AUDIT_SOURCE_SENSITIVITY.md  AUDIT_TEST_DEPENDENCIES.md  AUDIT_TIER_BREAKDOWN.md  BACKTEST_BLOCK_BOOTSTRAP.md  BACKTEST_PHASE_SPLIT.md  BACKTEST_SCORE_FORMULAS.md  BACKTEST_TARGET_SCOPE.md  BACKTEST_TRIAL_DISPOSITION.md  CHAT_LUONG_DU_LIEU.md  METHODOLOGY_CHANGELOG.md  THU_THAP_DU_LIEU.md  TODO_NGHIEN_CUU.md  TU_DONG_CAP_NHAT.md
docs/protocols/: MAX3D_POSITION_CONFIRMATION.md
docs/templates/: BAO_CAO_KET_QUA_AM.md
predictions/: ledger.jsonl
site/: du-lieu.html  index.html  phuong-phap.html
site/assets/: app.js  styles.css
site/data/: analysis-export.json  analysis-export.schema.json  audit-log.jsonl  audit-summary.json  dataset-quality.json  manifest.json  predictions.json  snapshot-manifest.json
src/vietlott_analytics/: __init__.py  builder.py  catalog.py  cli.py  fairness.py  io.py  methodology.py  predictions.py  provenance.py  schema.py  statistics.py  weather.py  (+1 more)
tests/: test_analytics_statistics.py  test_documentation.py  test_fairness_audit.py  test_prediction_ledger.py  test_static_site.py  test_weather_analysis.py
(+8 files in other folders)
