[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietlott-prediction-web"
version = "0.1.0"
description = "Static prediction and research website built from the Vietlott data collector repository."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "NhanAZ"}]
dependencies = [
  "jsonschema>=4.23,<5",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
vietlott-research-report = "vietlott_analytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["site/data", "tmp", "_data_repo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
